# actuary

./: .editorconfig  .gitignore  Dockerfile  Dockerfile.toolbox  Dockerfile.tsan  README.md  REUSE.toml  action.yml  context-example.json  devel  meson.build  meson_options.txt  package.json
.github/workflows/: ci.yml  cr.yml
.reuse/: dep5
src/: actuary-runner.sh  actuary-scanbuild.sh  actuary.js  actuary.sh  main.js  meson.build
src/suites/: abidiff.sh  analyzer.sh  asan.sh  cppcheck.sh  lcov.sh  test.sh  tsan.sh
